--- a/PuszekGCS/PuszekGCS.csproj
+++ b/PuszekGCS/PuszekGCS.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Command.cs" />
     <Compile Include="Source\MissionStatus.cs" />
+    <Compile Include="threads\UpdateThread.cs" />
     <EmbeddedResource Include="Forms\Communication.resx">
       <DependentUpon>Communication.cs</DependentUpon>
     </EmbeddedResource>
