--- a/PuszekGCS/PuszekGCS.csproj
+++ b/PuszekGCS/PuszekGCS.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Source\Command.cs" />
+    <Compile Include="Source\DatabaseConnector.cs" />
     <Compile Include="Source\MissionStatus.cs" />
     <Compile Include="threads\UpdateThread.cs" />
     <EmbeddedResource Include="Forms\Communication.resx">
